--- a/templates/__partials/footer.html.twig
+++ b/templates/__partials/footer.html.twig
@@ -2,121 +2,96 @@
 	<link rel="stylesheet" href="{{ asset('css/footer.css')}}">
 {% endblock %}
 
-
-<div class="container-fluid text-dark">
+<div class="container-fluid bg-dark text-light">
 	<div class="row text-center p-5">
-		<div class="col-3">
+		<div class="col-md-6 col-lg-4 order-2 order-md-1 pb-5 pb-md-0">
 			<h5>QUELQUES LIENS</h5>
-			<hr class="m-3">
+			<hr class="m-3"></hr>
+		<ul>
+			<li>
+				<a href="{{ path('home') }}" class="text-light">Accueil</a>
+			</li>
+			<li>
+				<a href="{{path('products_by_sexe', {'sexe': 'femme'})}}" class="text-light">Femme</a>
 
 
-			<ul>
-				<div>
-					<li>
-						<a href="{{path('home')}}">Accueil<a></li>
-							<li>
-								<a href="{{path('products_by_sexe', {'sexe': 'femme'})}}">Femme</a>
-
-							</li>
-							<li>
-								<a href="{{path('products_by_sexe', {'sexe': 'homme'})}}">Homme</a>
-
-							</li>
-							<li>
-								<a href="{{path('products_by_sexe', {'sexe': 'enfant'})}}">Enfant</a>
-							</li>
-							<li>
-								<a href="{{path('contact')}}">Contact</a>
-							</li>
-							<li>
-								<a href="">FAQ</a>
-							</li>
-							<li>
-								{% if app.user %}
-									<a href="{{ path('logout') }}">Déconnexion</a>
-
-								{% else %}
-									<a href="{{ path('login') }}">Connexion</a>
-
-								{% endif %}
-
-							</li>
-							<li>
-								{% if is_granted('ROLE_ADMIN')%}
-									<a href="{{ path('admin') }}">Admin</a>
-
-								{% endif %}
-
-							</li>
-						</ul>
-					</li>
-				</div>
+			</li>
+			<li>
+				<a href="{{path('products_by_sexe', {'sexe': 'homme'})}}" class="text-light">Homme</a>
 
 
-				<div class="col-3">
-					<h5>COORDONNES</h5>
-					<hr class="m-3 ">
-					<p>{{contact_company}}</p>
-					<p>{{contact_address}}</p>
-					<p>{{contact_zip ~' '~ contact_city}}</p>
-					<p>{{contact_phone}}</p>
-					<p>{{contact_email}}</p>
-				</div>
-
-				<div class="col-3">
-
-					<h5>RESEAUX SOCIAUX</h5>
-					<hr class="m-3">
-					<ul>
-						<li>
-							<span>
-								<i class="bi bi-facebook"></i>
-							</span>
-						</li>
-						<li>
-							<span>
-								<i class="bi bi-instagram"></i>
-							</span>
-						</li>
-						<li>
-							<span>
-								<i class="bi bi-snapchat"></i>
-							</span>
-						</li>
-						<li>
-							<span>
-								<i class="bi bi-tiktok"></i>
-							</span>
-						</li>
-
-					</div>
-
-					<div class="col-3">
-						<h5>ASSISTANCE</h5>
-						<hr class="m-3">
-						<ul>
-							<li>
-								<a href="">Politique de Confidentialité</a>
-							</li>
-							<li>
-								<a href="">Termes et Conditions
-								</a>
-							</li>
-							<li></li>
-							<li></li>
-						</ul>
-
-					</div>
+			</li>
+			<li>
+				<a href="{{path('products_by_sexe', {'sexe': 'enfant'})}}" class="text-light">Enfant</a>
 
 
-				</div>
+			</li>
+			<li>
+				<a href="{{path('contact')}}" class="text-light">Contact</a>
 
-				<p>Copyright &copy;
-					{{ "now"|date("Y") }}
-					- Willy TALOM | Articles extraits du site
-					<a href="https://www.videdressing.com/" target="_blank">videdressing.com</a>
-				</p>
+			</li>
 
 
-			</div>
-		</div>
+			{% if app.user %}
+				<li>
+					<a href="{{ path('logout') }}" class="text-light">Déconnexion</a>
+				</li>
+			{% else %}
+				<li>
+					<a href="{{ path('login') }}" class="text-light">Connexion</a>
+				</li>
+			{% endif %}
+			<li>
+				<a href="{{ path('cart') }}" class="text-light">Panier</a>
+			</li>
+		</ul>
+	</div>
+	<div class="col-md-6 col-lg-4 order-3 order-md-2 order-lg-3 py-5 py-md-0">
+
+		<h5>RESEAUX SOCIAUX</h5>
+		<hr class="m-3">
+		<ul>
+			<li>
+				<span>
+					<i class="bi bi-facebook"></i>
+				</span>
+			</li>
+			<li>
+				<span>
+					<i class="bi bi-instagram"></i>
+				</span>
+			</li>
+			<li>
+				<span>
+					<i class="bi bi-snapchat"></i>
+				</span>
+			</li>
+			<li>
+				<span>
+					<i class="bi bi-tiktok"></i>
+				</span>
+			</li>
+
+		</ul>
+
+
+	</div>
+	<div class="col-md-6 col-lg-4 order-3 order-md-2 order-lg-3 py-5 py-md-0">
+		<h5>COORDONNÉES</h5>
+		<hr class="m-3">
+		<p>{{ contact_company }}</p>
+		<p>{{ contact_address }}</p>
+		<p>{{ contact_zip ~ ' ' ~ contact_city }}</p>
+		<p>{{ contact_phone }}</p>
+		<p>{{ contact_email }}</p>
+	</div>
+</div>
+<div class="row" id="copyright">
+	<div class="col-12 text-center">
+		<p>Copyright &copy; 2022 - Willy TALOM |
+			<a href="#" class="text-light">mentions légales</a>
+			-
+			<a href="#" class="text-light">CGV</a>
+		</p>
+	</div>
+</div>
