--- a/templates/product/productShow.html.twig
+++ b/templates/product/productShow.html.twig
@@ -5,19 +5,29 @@
 	<section class="py-5">
 		<div class="container px-4 px-lg-5 my-5">
 			<div class="row gx-4 gx-lg-5 align-items-center">
-				<div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://via.placeholder.com/360x360.jpg/CCCCC" alt="..."/></div>
+				<div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{ asset('img/product/' ~ product.image1) }}" alt="..."/></div>
+
 
 				<div class="col-md-6">
 					<div class="small mb-1">{{product.reference}}</div>
 					<h1 class="display-5 fw-bolder">
 						{{product.name}}</h1>
 					<div class="fs-5 mb-5">
-						{% if product.reduction is not null %}
-							<span class="text-decoration-line-through">{{product.price}}</span>
-							<span>{{product.priceSolde}}</span>
+						{% if product.reduction == 0 %}
+
+							<span class="">{{product.price }}
+								€</span>
+
 						{% else %}
-							<span>{{product.price}}</span>
+
+							<span class="text-decoration-line-through text-danger">{{product.price}}
+								€</span>
+							<span>{{product.PriceSolde }}
+								€</span>
+
 						{% endif %}
+
+
 					</div>
 					<p class="lead">{{product.abstract}}</p>
 					<div class="d-flex">
@@ -39,18 +49,21 @@
 
 		<div class="row">
 
-			{% for products in 0..3 %}
+			{% for product in products|slice(0,4) %}
+
 
 				<div class="col-md-6 col-lg-4 col-xl-3 p-3">
 
 					<div class="card h-100">
-						<img class="card-img-top" src="https://via.placeholder.com/360x360.jpg/CCCCC" alt="..."/>
+						<img class="card-img-top" src="{{ asset('img/product/' ~ product.image1) }}" alt="..."/>
+
 
 						<div class="card-body p-4">
 							<div class="text-center">
 								<h5 class="fw-bolder">{{product.name}}</h5>
-								{{product.price}}
+
 							</div>
+
 						</div>
 						<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 							<div class="text-center">
