--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -14,7 +14,8 @@
 		</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-		<link rel="stylesheet" href="{{ asset('css/base.css') }}"> {% block stylesheets %}{% endblock %}
+
+		<link rel="stylesheet" href="{{ asset('css/admin.css') }}"> {% block stylesheets %}{% endblock %}
 
 
 		</head>
@@ -64,7 +65,7 @@
 						</a>
 					</a>
 					<a class="py-2">
-						<a href="#" class="text-light" title="utilisateurs">
+						<a href="{{path('admin_users')}}" class="text-light" title="utilisateurs">
 							<i class="bi bi-people fs-4"></i>
 						</a>
 					</a>
