--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -26,7 +26,7 @@
 					{% for element in cart %}
 						<tr>
 							<td>
-								<img src="{{ asset('img/product/' ~ element.product.img1) }}" alt="image principale {{ element.product.name }}">
+								<img src="{{ asset('img/product/' ~ element.product.image1) }}" alt="image principale {{ element.product.name }}">
 								{{ element.product.name }}
 								<a href="{{ path('cart_delete', {'id': element.product.id}) }}" class="text-danger">
 									<i class="bi bi-x-circle"></i>
