--- a/templates/product/adminList.html.twig
+++ b/templates/product/adminList.html.twig
@@ -7,11 +7,17 @@
 
 	<h1 class="pb-5 text-center">Liste des produits</h1>
 
+	<div class="text-end mt-4">
+		<a href="{{ path('create_product') }}" class="btn btn-success">Ajouter un produit</a>
+	</div>
+
+
 	<table class="table table-hover table-sm texxt-center align-middle">
 		<thead>
 			<tr>
 				<th>N°</th>
 				<th>Nom</th>
+				<th>Quantité</th>
 				<th>Prix</th>
 				<th>Réference</th>
 				<th>reductions (%)</th>
@@ -26,8 +32,8 @@
 			{% for product in products|reverse %}
 				<tr>
 					<td>{{ loop.revindex }}</td>
-					<td><img src="" alt="image principale du jeu {{ product.name }}" class="pe-3">
-						{{ product.name }}</td>
+					<td class="text-start"><img src="{{ asset('img/product/' ~ product.image1) }}" alt="image principale du produit {{ product.name }}" class="pe-3">{{ product.name }}</td>
+					<td>{{product.quantity}}</td>
 					<td>{{ product.price|number_format(2, ',', ' ') }}
 						€</td>
 					<td>{{ product.reference }}</td>
@@ -44,14 +50,14 @@
 						<a href="{{ path('delete_product', {'id': product.id}) }}">
 							<i class="bi bi-trash3 text-danger"></i>
 						</a>
+
+
 					</td>
 				</tr>
 			{% endfor %}
 		</tbody>
 	</table>
-
 	<div class="text-end mt-4">
 		<a href="{{ path('create_product') }}" class="btn btn-success">Ajouter un produit</a>
 	</div>
-
 {% endblock %}
