--- a/templates/product/sexe.html.twig
+++ b/templates/product/sexe.html.twig
@@ -12,22 +12,44 @@
 					<div class="card h-50">
 
 						<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nouveauté</div>
-						<img class="card-img-top" src="https://via.placeholder.com/360x360.jpg/CCCCC" alt="produit de {{ product.name }}"/>
+						<img class="card-img-top" src="{{ asset('img/product/' ~ product.image1) }}" alt="produit de {{ product.name }}"/>
+
 						<div class="card-body p-4">
 							<div class="text-center">
-								<h5 class="fw-bolder">{{ product.sexe.name }}</h5>
-								<h6 id="text-des">{{ product.description|u.truncate(70,'...', false) }}</h6>
-								<span class="text-muted text-decoration-line-through">{{product.price}}
-									€
-								</span>
-								{{product.PriceSolde}}
-								€
+								<h5 class="fw-bolder">{{ product.name }}</h5>
+								<h6 id="text-des">{{ product.description|u.truncate(40,'...', false) }}</h6>
+								{% if product.reduction == 0 %}
+
+									<span class="">{{product.price}}
+										€
+
+
+									</span>
+
+
+								{% else %}
+									<span class="text-decoration-line-through text-danger">{{product.price}}
+
+										€
+
+
+									</span>
+
+
+									<span>
+										{{product.PriceSolde}}
+										€
+									</span>
+
+								{% endif %}
+
+
 							</div>
 						</div>
 						<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 							<div class="text-center">
-								<a href="{{ path('product_show', {'slug': product.slug}) }}" class="card-link btn btn-outline-primary">Détails</a>
-								<a href="#" class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
+								<a href="{{ path('product_show', {'slug': product.slug}) }}" class="card-link btn btn-outline-primary">Acheter</a>
+								<a href="{{path('cart_add', {'id':product.id})}}" class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
 									<i class="bi bi-cart-plus-fill"></i>
 								</a>
 
