--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -55,15 +55,16 @@
 	<div class="col-12">
 		<div class="row">
 
-			{% for product in products %}
+			{% for product in products|slice(0,12) %}
 
 
 				<div class="col-md-6 col-lg-5 col-xl-2 p-3">
 
 
 					<div class="card h-50">
-
-						<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nouveauté</div>
+						{% if product.createdAt|date('Y-m-d') >= 'now'|date_modify('-20 days')|date('Y-m-d') %}
+							<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nouveauté</div>
+						{% endif %}
 						<img class="card-img-top" src="{{ asset('img/product/' ~ product.image1) }}" alt="produit de {{ product.name }}"/>
 
 						<div class="card-body p-4">
@@ -99,7 +100,7 @@
 						</div>
 						<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 							<div class="text-center">
-								<a href="{#{{ path('product_show', {'slug': product.slug}) }}#}" class="card-link btn btn-outline-primary">Détails</a>
+								<a href="{{ path('product_show', {'slug': product.slug}) }}" class="card-link btn btn-outline-primary">Détails</a>
 								<a href="#" class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
 									<i class="bi bi-cart-plus-fill"></i>
 								</a>
