--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -1,14 +1,12 @@
 {% extends "baseAdmin.html.twig" %}
 
-{% block title %}
-	{{ app.request.attributes.get('_route') == 'create_user' ? 'création' : 'modification' }}
-	utilisateur
+{% block title %}création utilisateur
 {% endblock %}
 
 {% block body %}
 
-	{{ form_start(userForm) }}
 
+	{{ form_start(userForm) }}
 	<div class="row">
 		<div class="col-6">
 			{{ form_label(userForm.first_name, 'Prénom') }}
@@ -32,8 +30,11 @@
 		</div>
 		<div class="col-3">
 			{{ form_row(userForm.roles, {
-		                    'label': 'Roles'
-		                    
+		                    'label': 'Prix (en €)',
+		                    'attr': {
+		                        'class': 'form-choice-label'
+		
+		                    }
 		                }) }}
 		</div>
 		<div class="col-3">
@@ -73,11 +74,10 @@
 		<div class="row">
 			<div class="col-12 text-end my-3">
 				<a href="{{ path('admin_users')}}" class="btn btn-outline-danger me-3">Annuler</a>
-				<button class="btn btn-success">{{ app.request.attributes.get('_route') == 'create_user' ? 'Créer' : 'Modifier' }}
-				</button>
+				<button class="btn btn-success">Créer</button>
 			</div>
 		</div>
 
-
 		{{ form_end(userForm) }}
+
 	{% endblock %}
