--- a/templates/user/userList.html.twig
+++ b/templates/user/userList.html.twig
@@ -1,44 +1,65 @@
-{% extends "baseAdmin.html.twig" %}
+{% extends 'baseAdmin.html.twig' %}
 
-{% block title %}utilisateurs
+{% block title %}liste d'Utilisateurs
 {% endblock %}
 
 {% block body %}
+	<h1>Utilisateurs</h1>
 
-	<h1 class="pb-5 text-center">Liste des utilisateurs</h1>
-
-	<table class="table table-hover table-sm texxt-center align-middle">
+	<table class="table">
 		<thead>
 			<tr>
-				<th>N°</th>
-				<th>Prénom</th>
-				<th>Nom</th>
-				<th>Téléphone</th>
+				<th>Id</th>
 				<th>Email</th>
-				<th>Role</th>
-				<th>Mot de passe</th>
-				<th>Adresse</th>
+				<th>Roles</th>
+				<th>Password</th>
+				<th>Last_name</th>
+				<th>First_name</th>
+				<th>Phone</th>
+				<th>Created_at</th>
+				<th>IsVerified</th>
+				<th>actions</th>
 			</tr>
 		</thead>
 		<tbody>
 			{% for user in users|reverse %}
 				<tr>
-					<td>{{ loop.revindex }}</td>
-					<td>{{ user.firstName }}</td>
-					<td>{{ user.lastName}}</td>
-					<td>{{ user.phone}}</td>
+					<td>{{loop.revindex }}</td>
 					<td>{{ user.email }}</td>
-					<td>{#{{ user.roles}}#}</td>
-					<td>{#{{ user.passeword }}#}</td>
-					<td>{#{{ user.address }}#}</td>
 					<td>
-						{# <a href="{{ path('update_user', {'id': user.id}) }}">
-																																																																															<i class="bi bi-pencil-square text-primary"></i>
-																																																																														</a>
-																																																																														<a href="{{ path('delete_user', {'id': user.id}) }}">
-																																																																															<i class="bi bi-trash3 text-danger"></i>
-																																																																														</a> #}
+						{% for role in user.roles %}
+							{% if role == "ROLE_USER" %}
+								Utilisateur
+							{% elseif role == "ROLE_ADMIN" %}
+								Administrateur
+
+							{% elseif role == "ROLE_SUPER_ADMIN" %}
+								Super Administrateur
+
+
+							{% endif %}
+						{% endfor %}
 					</td>
+
+					<td>{{ user.password }}</td>
+					<td>{{ user.lastName }}</td>
+					<td>{{ user.firstName }}</td>
+					<td>{{ user.phone }}</td>
+					<td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+					<td>{{ user.isVerified ? 'Yes' : 'No' }}</td>
+					<td>
+						<a href="{{ path('update_user', {'id': user.id}) }}">
+							<i class="bi bi-pencil-square text-primary"></i>
+						</a>
+						<a href="{{ path('delete_user', {'id': user.id}) }}">
+							<i class="bi bi-trash3 text-danger"></i>
+						</a>
+
+					</td>
+				</tr>
+			{% else %}
+				<tr>
+					<td colspan="10">Pas d'Utilisateurs trouvé</td>
 				</tr>
 			{% endfor %}
 		</tbody>
