installation stripe, payment controller

--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -60,6 +60,20 @@
 						</a>
 					</a>
 					<a class="py-2">
+						<a href="{#{{path('admin_brand')}}#}" class="text-light" title="transporteur">
+							<i class="bi bi-truck"></i>
+
+						</a>
+					</a>
+					<a class="py-2">
+						<a href="{#{{path('admin_brand')}}#}" class="text-light" title="adresse">
+							<i class="bi bi-signpost-split"></i>
+
+						</a>
+					</a>
+
+
+					<a class="py-2">
 						<a href="#" class="text-light" title="commandes">
 							<i class="bi bi-list-ol fs-4"></i>
 						</a>
