--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -101,7 +101,8 @@
 						<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 							<div class="text-center">
 								<a href="{{ path('product_show', {'slug': product.slug}) }}" class="card-link btn btn-outline-primary">Détails</a>
-								<a href="#" class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
+								<a href="{{path('cart_add', {'id':product.id})}}" class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
+
 									<i class="bi bi-cart-plus-fill"></i>
 								</a>
 
