--- a/templates/cart/validation.html.twig
+++ b/templates/cart/validation.html.twig
@@ -38,7 +38,6 @@
 
 
 			</tbody>
-
 			<tfoot>
 				<tr>
 					<th colspan="2">TOTAL</th>
@@ -47,6 +46,21 @@
 
 				</tr>
 			</tfoot>
+			{{ form_start(cartValidationForm)}}
+
+			<tfoot>
+				<tr>
+					<th>{{ form_row(cartValidationForm.carrier, {
+			'label': 'Transporteur'		
+			})}}</th>
+
+					<TH></TH>
+					<th>{{total|number_format(2,',', '')}}
+						€</th>
+
+				</tr>
+			</tfoot>
+
 		</table>
 	</div>
 
@@ -55,7 +69,7 @@
 			Livraison
 
 		</h2>
-		{{ form_start(cartValidationForm)}}
+
 
 		{{ form_row(cartValidationForm.billing_address, {
 			'label': 'Adresse de facturation'		
@@ -64,16 +78,14 @@
 			'label': 'Adresse de livraison'		
 			})}}
 		<h2>Ajouter une adresse</h2>
-		{{ form_row(cartValidationForm.carrier, {
-			'label': 'Transporteur'		
-			})}}
+
 		<div class="row text-end">
 			<div class="col-12">
-				<button class="btn btn-success" type="submit">Payer</button>
+				<a href="{{ path('payment') }}" class="btn btn-success">Payer</a>
 			</div>
 		</div>
 	</div>
-	<script src="https://js.stripe.com/v3/"></script>
+
 
 	{{ form_end(cartValidationForm)}}
 
