--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -1,20 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PaymentController!{% endblock %}
+{% block description %}Page de paiement
+{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block title %}paiement
+{% endblock %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+{% block h1 %}Paiement
+{% endblock %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/SYMF/projet/src/Controller/PaymentController.php'|file_link(0) }}">src/Controller/PaymentController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/SYMF/projet/templates/payment/index.html.twig'|file_link(0) }}">templates/payment/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% block body %}{% endblock %}
+
+{% block javascripts %}
+
+	<script src="https://js.stripe.com/v3/"></script>
+
+	<script>
+		var stripe = Stripe('pk_test_51Le0dIKhOJnU8RJKTxlD1GSQbBISYxcCnW8ErpW8x7YgDUO6pNoa59STGjXtyIe6z9XiEbmhhFSLrlFE30W7yxnK005y1q1ots'); // initialise Stripe
+stripe.redirectToCheckout({sessionId: '{{ sessionId }}'})
+	</script>
+
 {% endblock %}
