--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -60,7 +60,7 @@
 						</a>
 					</a>
 					<a class="py-2">
-						<a href="{#{{path('admin_brand')}}#}" class="text-light" title="transporteur">
+						<a href="{{path('admin_carriers')}}" class="text-light" title="transporteur">
 							<i class="bi bi-truck"></i>
 
 						</a>
@@ -74,7 +74,7 @@
 
 
 					<a class="py-2">
-						<a href="#" class="text-light" title="commandes">
+						<a href="{{path('admin_orders')}}" class="text-light" title="commandes">
 							<i class="bi bi-list-ol fs-4"></i>
 						</a>
 					</a>
