--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -29,9 +29,15 @@
 					<td>{{ order.carrier.name }}</td>
 					<td>{{ order.user.firstName ~ ' ' ~ order.user.lastName|upper }}</td>
 					{# <td class="text-start"><img src="{{ asset('img/product/' ~ product.img1) }}" alt="image principale du produit{{ product.name }}" class="pe-3"> {{ product.name }}</td>
-																		                    <td>{{ product.price|number_format(2, ',', ' ') }} €</td>
-																		                    <td>{{ product.category.name }}</td> #}
+																																	                    <td>{{ product.price|number_format(2, ',', ' ') }} €</td>
+																																	                    <td>{{ product.category.name }}</td> #}
 					<td>
+
+						<a href="#">
+							<i class="bi bi-ticket-detailed"></i>
+
+						</a>
+
 						<a href="#">
 							<i class="bi bi-pencil-square text-primary"></i>
 						</a>
