--- a/templates/user/form.html.twig
+++ b/templates/user/form.html.twig
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block body %}
+	{{ form_start(addressForm) }}
 
 	{{ form_start(userForm) }}
 
@@ -14,62 +15,98 @@
 			{{ form_label(userForm.first_name, 'Prénom') }}
 			{{ form_errors(userForm.first_name) }}
 			{{ form_widget(userForm.first_name, {
-                    'attr': {
-                        'placeholder': 'Ex.: John'
-                    }
-                }) }}
+					                    'attr': {
+					                        'placeholder': 'Ex.: John'
+					                    }
+					                }) }}
 			{{ form_help(userForm.first_name) }}
 		</div>
 		<div class="col-6">
 			{{ form_label(userForm.last_name, 'Nom') }}
 			{{ form_errors(userForm.last_name) }}
 			{{ form_widget(userForm.last_name, {
-                    'attr': {
-                        'placeholder': 'Ex.: Doe'
-                    }
-                }) }}
+				'attr': {
+					     'placeholder': 'Ex.: Doe'
+					    }
+			}) }}
 			{{ form_help(userForm.last_name) }}
 		</div>
 		<div class="col-3">
 			{{ form_row(userForm.roles, {
-		                    'label': 'Roles'
-		                    
-		                }) }}
+				'label': 'Roles'
+							                    
+			}) }}
 		</div>
 		<div class="col-3">
 			{{ form_row(userForm.email, {
-                    'label': 'Email',
-                    'attr': {
-                        'placeholder': 'willytalom@yahoo.Fr'
-                    }
-                }) }}
+				'label': 'Email',
+				'attr': {
+					    	'placeholder': 'willytalom@yahoo.Fr'
+						}
+		    }) }}
 		</div>
 		<div class="col-3">
 			{{ form_row(userForm.phone, {
-                    'label': 'Numéro de téléphone',
-                    'attr': {
-                        'placeholder': ''
-                    }
-                }) }}
+				'label': 'Numéro de téléphone',
+				'attr': {
+					    'placeholder': ''
+					    }
+			}) }}
 		</div>
 		<div class="col-3">
 			{{ form_row(userForm.password, {
-                    'label': 'Mot de passe',
-                    'attr': {
-                        'placeholder': ''
-                    }
-                }) }}
+				'label': 'Mot de passe',
+				'attr': {
+					    	'placeholder': ''
+					    }
+			}) }}
+		</div>
+		<div class="col-3">
+			{{ form_row(addressForm.address, {
+				'label': 'Adresse postale',
+                'attr': {
+						'placeholder' : 'Ex: 8 rue de Lasoif '
+						}
+			}) }}
+		</div>
+		<div class="col-3">
+			{{ form_row(addressForm.additional, {
+				'label': 'Adresse complémentaire',
+				'attr': {
+						'placeholder' : 'Ex: Residence impulsion '
+					    }
+		}) }}
+		</div>
+		<div class="col-3">
+			{{ form_row(addressForm.zip, {
+				'label': 'Code postale',
+				'attr': {
+						'placeholder' : 'Ex: 75001 '
+					    }
+			}) }}
+		</div>
+		<div class="col-3">
+			{{ form_row(addressForm.city, {
+				'label': 'Ville',
+				'attr': {
+						'placeholder' : 'Ex: Paris '
+						}
+			}) }}</div>
+		<div class="col-3">
+			{{ form_row(addressForm.country, {
+				'label': 'Pays',
+				'attr': {
+						'placeholder' : 'Ex: France '
+						}
+			}) }}
 		</div>
 		<div class="col-3">
 			{{ form_row(userForm.isVerified, {
-                    'label': 'Compte verifié',
-                    'attr': {
-                        'placeholder': ''
-                    }
-                }) }}
-		</div>
-
-
+				'label': 'Compte verifié',
+				'attr': {
+					    'placeholder': ''
+					    }
+			}) }}</div>
 		<div class="row">
 			<div class="col-12 text-end my-3">
 				<a href="{{ path('admin_users')}}" class="btn btn-outline-danger me-3">Annuler</a>
@@ -77,7 +114,6 @@
 				</button>
 			</div>
 		</div>
-
-
 		{{ form_end(userForm) }}
+		{{ form_end(addressForm) }}
 	{% endblock %}
