--- a/templates/__partials/footer.html.twig
+++ b/templates/__partials/footer.html.twig
@@ -89,9 +89,11 @@
 <div class="row" id="copyright">
 	<div class="col-12 text-center">
 		<p>Copyright &copy; 2022 - Willy TALOM |
-			<a href="#" class="text-light">mentions légales</a>
+			<a href="{{path('mentions_legales')}}" class="text-light">mentions légales</a>
+
 			-
-			<a href="#" class="text-light">CGV</a>
+			<a href=" {{path('mentions_legales')}} " class=" text-light">CGV</a>
+
 		</p>
 	</div>
 </div>
