--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,50 +4,51 @@
 {% endblock %}
 
 {% block body %}
-	<form method="post">
-		{% if error %}
-			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-		{% endif %}
+<form method="post">
+	{% if error %}
+	<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+	{% endif %}
 
-		{% if app.user %}
-			<div class="mb-3">
-				Vouus etes connecté en tant que
-				{{ app.user.userIdentifier }},
-				<a href="{{ path('logout') }}">Déconnexion</a>
-			</div>
-		{% endif %}
-
-		<div>
-			<h1 class="mt-3 font-weight-normal">Connectez-vous</h1>
-		</div>
-		<label for="inputEmail">Email</label>
-		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-		<label for="inputPassword">Mot de passe</label>
-		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-		<input
-		type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-		{#
-							Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-						Seremember_me.html
-																										
-						<div class="checkbox mb-3">
-						    <label>
-						> Remember me
-						</label>
-						</div>
-						#}
-
-		<button class="btn btn-lg btn-primary" type="submit">
-			Connexion
-		</button>
-	</form>
+	{% if app.user %}
+	<div class="mb-3">
+		Vouus etes connecté en tant que
+		{{ app.user.userIdentifier }},
+		<a href="{{ path('logout') }}">Déconnexion</a>
+	</div>
+	{% endif %}
 
 	<div>
-		<p>Pas encore de compte ?
-			<a href="{{path('register')}}">Créer-en un !</a>
-		</p>
+		<h1 class="mt-3 font-weight-normal">Connectez-vous</h1>
 	</div>
+	<label for="inputEmail">Email</label>
+	<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
+		autocomplete="email" required autofocus>
+	<label for="inputPassword">Mot de passe</label>
+	<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password"
+		required>
+
+	<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+	{#
+	Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+	Seremember_me.html
+
+	<div class="checkbox mb-3">
+		<label>
+			> Remember me
+		</label>
+	</div>
+	#}
+
+	<button class="btn btn-lg btn-primary" type="submit">
+		Connexion
+	</button>
+</form>
+
+<div>
+	<p>Pas encore de compte ?
+		<a href="{{path('register')}}">Créer-en un !</a>
+	</p>
+</div>
 
 {% endblock %}
