--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -6,78 +6,78 @@
 {% block body %}
 
 
-	{{ form_start(userForm) }}
+{{ form_start(userForm) }}
+<div class="row">
+	<div class="col-6">
+		{{ form_label(userForm.first_name, 'Prénom') }}
+		{{ form_errors(userForm.first_name) }}
+		{{ form_widget(userForm.first_name, {
+		'attr': {
+		'placeholder': 'Ex.: John'
+		}
+		}) }}
+		{{ form_help(userForm.first_name) }}
+	</div>
+	<div class="col-6">
+		{{ form_label(userForm.last_name, 'Nom') }}
+		{{ form_errors(userForm.last_name) }}
+		{{ form_widget(userForm.last_name, {
+		'attr': {
+		'placeholder': 'Ex.: Doe'
+		}
+		}) }}
+		{{ form_help(userForm.last_name) }}
+	</div>
+	<div class="col-3">
+		{{ form_row(userForm.roles, {
+		'label': 'Roles',
+		'attr': {
+		'class': 'form-choice-label'
+
+		}
+		}) }}
+	</div>
+	<div class="col-3">
+		{{ form_row(userForm.email, {
+		'label': 'Email',
+		'attr': {
+		'placeholder': 'willytalom@yahoo.Fr'
+		}
+		}) }}
+	</div>
+	<div class="col-3">
+		{{ form_row(userForm.phone, {
+		'label': 'Numéro de téléphone',
+		'attr': {
+		'placeholder': ''
+		}
+		}) }}
+	</div>
+	<div class="col-3">
+		{{ form_row(userForm.password, {
+		'label': 'Mot de passe',
+		'attr': {
+		'placeholder': ''
+		}
+		}) }}
+	</div>
+	<div class="col-3">
+		{{ form_row(userForm.isVerified, {
+		'label': 'Compte verifié',
+		'attr': {
+		'placeholder': ''
+		}
+		}) }}
+	</div>
+
+
 	<div class="row">
-		<div class="col-6">
-			{{ form_label(userForm.first_name, 'Prénom') }}
-			{{ form_errors(userForm.first_name) }}
-			{{ form_widget(userForm.first_name, {
-                    'attr': {
-                        'placeholder': 'Ex.: John'
-                    }
-                }) }}
-			{{ form_help(userForm.first_name) }}
+		<div class="col-12 text-end my-3">
+			<a href="{{ path('admin_users')}}" class="btn btn-outline-danger me-3">Annuler</a>
+			<button class="btn btn-success">Créer</button>
 		</div>
-		<div class="col-6">
-			{{ form_label(userForm.last_name, 'Nom') }}
-			{{ form_errors(userForm.last_name) }}
-			{{ form_widget(userForm.last_name, {
-                    'attr': {
-                        'placeholder': 'Ex.: Doe'
-                    }
-                }) }}
-			{{ form_help(userForm.last_name) }}
-		</div>
-		<div class="col-3">
-			{{ form_row(userForm.roles, {
-		                    'label': 'Prix (en €)',
-		                    'attr': {
-		                        'class': 'form-choice-label'
-		
-		                    }
-		                }) }}
-		</div>
-		<div class="col-3">
-			{{ form_row(userForm.email, {
-                    'label': 'Email',
-                    'attr': {
-                        'placeholder': 'willytalom@yahoo.Fr'
-                    }
-                }) }}
-		</div>
-		<div class="col-3">
-			{{ form_row(userForm.phone, {
-                    'label': 'Numéro de téléphone',
-                    'attr': {
-                        'placeholder': ''
-                    }
-                }) }}
-		</div>
-		<div class="col-3">
-			{{ form_row(userForm.password, {
-                    'label': 'Mot de passe',
-                    'attr': {
-                        'placeholder': ''
-                    }
-                }) }}
-		</div>
-		<div class="col-3">
-			{{ form_row(userForm.isVerified, {
-                    'label': 'Compte verifié',
-                    'attr': {
-                        'placeholder': ''
-                    }
-                }) }}
-		</div>
+	</div>
 
-
-		<div class="row">
-			<div class="col-12 text-end my-3">
-				<a href="{{ path('admin_users')}}" class="btn btn-outline-danger me-3">Annuler</a>
-				<button class="btn btn-success">Créer</button>
-			</div>
-		</div>
-
-		{{ form_end(userForm) }}
+	{{ form_end(userForm) }}
 
 	{% endblock %}
