modif account template

--- a/templates/__partials/header.html.twig
+++ b/templates/__partials/header.html.twig
@@ -51,7 +51,7 @@
 					{% endif %}
 
 				</a>
-				<a id="icon2" href="linkk" class="nav-link text-white">
+				<a id="icon2" href="{{path('user_account')}}" class="nav-link text-white">
 					<i class="bi bi-person"></i>
 
 					{% if app.user %}
