--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,20 +1,62 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccountController!{% endblock %}
+{% block title %}Mon Compte{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/SYMF/projet/src/Controller/AccountController.php'|file_link(0) }}">src/Controller/AccountController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/SYMF/projet/templates/account/index.html.twig'|file_link(0) }}">templates/account/index.html.twig</a></code></li>
-    </ul>
+{% if is_granted('ROLE_ADMIN') %}
+<small><a href="{{path('admin')}}">Vous êtes un administrateur, accéder au backoffice ?</a></small><br />
+{% endif %}
+Bienvenue {{ app.user.lastname }} dans votre compte.<br />
+C'est dans cet espace que vous allez pouvoir gérer toutes vos informations personnelles.
+<hr>
+<div class="row">
+    <div class="col-md-4">
+        <div class="account-item text-center">
+            <img src="{{ asset('assets/img/password.png') }}" alt="Modifier mon mot de passe"><br />
+            {# <a href="{{ path('account_password') }}">Modifier mon mot de passe</a> #}
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="account-item text-center">
+            <img src="{{ asset('assets/img/address-book.png') }}" alt="Gérer mes adresses"><br />
+            {# <a href="{{ path('account_address') }}">Gérer mes adresses</a> #}
+        </div>
+    </div>
+    <div class="col-md-4">
+        {# <div class="account-item text-center">
+            <img src="{{ asset('assets/img/purchase.png') }}" alt="Mes commandes"><br />
+            <a href="{{ path('account_order') }}">Mes commandes</a>
+        </div> #}
+    </div>
 </div>
+<hr>
+{# <a href="{{ path('account_address_add') }}" class="btn btn-info btn-sm float-right">Ajouter une adresse</a> #}
+<h1>Mes adresses</h1>
+C'est dans cet espace que vous allez pouvoir gérer toutes vos adresses.<br />
+{# <a href="{{ path('account') }}">Retour</a> #}
+<hr>
+{% if app.user.addresses|length == 0 %}
+<p class="text-center">
+    Vous n'avez pas encore ajouté d'adresse dans votre compte client. Pour en ajouter une, veuillez <a {#
+        href="{{ path('account_address_add') }}">cliquer ici</a>. #}
+</p>
+{% else %}
+<div class="row">
+    {# {% for address in app.user.addresses %}
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">{{ address.name }}</h5>
+                <p class="card-text">
+                    {{ address.address }},<br />
+                    {{ address.postal }} - {{ address.city }} - {{ address.country }}
+                </p>
+                {# <a href="{{ path('account_address_edit', { 'id' : address.id }) }}">Modifier</a> | <a
+                    href="{{ path('account_address_delete', { 'id' : address.id }) }}">Supprimer</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %} #}
+</div>
+{% endif %}
 {% endblock %}
